@@ -10,19 +10,22 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.client.RestTemplate;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-record PageMap(List<Cse_Image> cse_image) {}
+record PageMap(List<Cse_Image> cse_image) {
+}
 
-record Cse_Image(String src) {}
+record Cse_Image(String src) {
+}
 
 class Item {
-    private String link;
-    private String title;
+    private String  link;
+    private String  title;
     private PageMap pagemap;
-    private String price;
+    private String  price;
 
     public String getLink() {
         return link;
@@ -56,6 +59,7 @@ class Item {
         this.price = price;
     }
 }
+
 class SearchResult {
     private List<Item> items;
 
@@ -67,15 +71,16 @@ class SearchResult {
         this.items = items;
     }
 }
+
 @RestController
 public class SearchController {
 
-    private static final String API_KEY = "AIzaSyBvQShdKz6SVuFY94HW9XOs4joQ0YS9DgU";
+    private static final String API_KEY          = "AIzaSyBvQShdKz6SVuFY94HW9XOs4joQ0YS9DgU";
     private static final String SEARCH_ENGINE_ID = "04427d5135e124d17";
 
     @GetMapping("/search")
     public SearchResult search(@RequestParam String keyword) throws Exception {
-        String encodedKeyword = URLEncoder.encode(keyword, "UTF-8");
+        String encodedKeyword = URLEncoder.encode(keyword, StandardCharsets.UTF_8);
         String apiUrl = "https://www.googleapis.com/customsearch/v1?key=" + API_KEY +
                 "&cx=" + SEARCH_ENGINE_ID + "&q=" + encodedKeyword + "&num=10";
 
@@ -84,9 +89,9 @@ public class SearchController {
 
         SearchResult searchResult = response.getBody();
 
-        String[] Classs = {".giakm",".detail-product-old-price", ".gia-km-cu", ".pro-price", ".price", ".product-price",".productPriceMain",".product__price--show"};
-        for (Item item : searchResult.getItems()){
-            String price ="";
+        String[] Classs = {".giakm", ".detail-product-old-price", ".gia-km-cu", ".pro-price", ".price", ".product-price", ".productPriceMain", ".product__price--show"};
+        for (Item item : searchResult.getItems()) {
+            String price = "";
             Document doc = Jsoup.connect(item.getLink()).get();
 
             for (String Class : Classs) {
